magpie 1.74
-----------
Remove scripts/job-scripts/zookeeper-ruok-script.sh script, which was
  duplicated within Magpie w/ 'zookeeperruok' option in Zookeeper.
Rename start/stop scripts in bin/ for consistency to many big data
  projects.  If you manually started/stopped services in the past, some 
  script names may have changed.

magpie 1.73
-----------
Support "args" options to Magpie, Hadoop, Hbase, Spark, Storm script
  options.
Support Spark 1.6.2-bin-hadoop2.6.
Update default Spark to 1.6.2-bin-hadoop2.6.
Support Storm 0.10.1, 1.0.0, and 1.0.1.
Update default Storm to 1.0.1.
When users want to use alternate config files, instead of copying all
  files from ${MAGPIE_SCRIPTS_HOME}/conf, into a project's alternate
  CONF_FILES director (e.g. HADOOP_CONF_FILES), users can copy only the
  files they wish to modify.
Fix magpie-gather-config-files-and-logs-script.sh to gather Pig,
  Zeppelin, Phoenix, and Kafka conf/log files.
Support HADOOP_LOCALSTORE_CLEAR option.
Support SPARK_LOCAL_SCRATCH_DIR_CLEAR option.
Support multiple paths for SPARK_LOCAL_SCRATCH_DIR.
Various minor bug fixes regarding Spark w/ Yarn use.

magpie 1.72
-----------
Support SPARK_USE_YARN option for Spark to default to using Yarn.

magpie 1.71
-----------
Adjust Yarn yarn.scheduler.maximum-allocation-mb to be same as yarn.nodemanager.resource.memory-mb. 
Support Mahout 0.12.0, 0.12.1
Update default Mahout to 0.12.1
Support Phoenix 4.7.0
Update default Phoenix to 4.7.0.
Support Hbase 1.2.1
Update default Hbase to 1.2.1.

magpie 1.70
-----------
Handle corner cases where job name contains dollar sign or whitespace.
  Can lead to problems because job name is used internally within Magpie
  for file paths, etc.
Support setting MAGPIE_PYTHON, to configure Python paths in projects
  appropriately.  Currently used to set PYSPARK_PYTHON in Spark.
Support ability to kill scripts early and all Yarn jobs cleanly.
Exit job if an error occurs during magpie-setup phase.